# data-analysis-llm-agent

./: .gitignore  README.md  chainlit.md  pyproject.toml  requirements.txt
src/data/: movies.db
src/data-analysis-llm-agent/: app.py  bot.py  tools.py  utils.py
